err/rt.searchtitlegroups.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rt'...
Listing './lib/python3.5/site-packages/rt/searchtitlegroups'...
Listing './lib/python3.5/site-packages/rt/searchtitlegroups/Extensions'...
Compiling './lib/python3.5/site-packages/rt/searchtitlegroups/__init__.py'...
***   File "./lib/python3.5/site-packages/rt/searchtitlegroups/__init__.py", line 7
    raise NotSupported, 'No plugins allow for group management'
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rt/searchtitlegroups/browser'...
Listing './lib/python3.5/site-packages/rt/searchtitlegroups/profiles'...
Listing './lib/python3.5/site-packages/rt/searchtitlegroups/profiles/default'...
Listing './lib/python3.5/site-packages/rt/searchtitlegroups/skins'...
Listing './lib/python3.5/site-packages/rt/searchtitlegroups/skins/search_title_groups'...
Compiling './lib/python3.5/site-packages/rt/searchtitlegroups/skins/search_title_groups/prefs_group_edit.py'...
***   File "./lib/python3.5/site-packages/rt/searchtitlegroups/skins/search_title_groups/prefs_group_edit.py", line 27
    return context.prefs_group_details()
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/rt.searchtitlegroups-1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
